@@ -6,6 +6,10 @@
 	user pass in a structure for bookkeeping.  This allows nested
 	iteration, so long as two different iteration structures are used.
 
+	* command.c (do_line):  Strip trailing comments from input lines as
+	they are read, since there is no point in storing what we are going
+	to ignore later.  Minor cleanup of #ifdef nesting.
+
 2011-05-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/specfun.c (humlik):  Initialization would fail whenever y = -1.
